--- a/fomobot/pom.xml
+++ b/fomobot/pom.xml
@@ -4,12 +4,12 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.leafCat</groupId>
-	<artifactId>coinsky</artifactId>
+	<artifactId>fomobot</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 
-	<name>coinsky</name>
-	<description>Korea Coin Board</description>
+	<name>fomobot</name>
+	<description>Fomo bot</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
